--- a/pom.xml
+++ b/pom.xml
@@ -1,30 +1,31 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>com.bazaarvoice.commons</groupId>
-    <artifactId>bv-opensource-super-pom</artifactId>
-    <version>1.4</version>
+    <groupId>io.dangernoodle</groupId>
+    <artifactId>dangernoodle-io-build-pom</artifactId>
+    <version>8</version>
   </parent>
 
-  <groupId>com.bazaarvoice.maven.plugins</groupId>
   <artifactId>s3-upload-maven-plugin</artifactId>
-  <version>1.5-SNAPSHOT</version>
+  <version>2.0.0-SNAPSHOT</version>
   <packaging>maven-plugin</packaging>
 
-  <name>S3 upload maven plugin</name>
-
-  <scm>
-    <url>https://github.com/bazaarvoice/s3-upload-maven-plugin</url>
-    <connection>scm:git:git@github.com:bazaarvoice/s3-upload-maven-plugin.git</connection>
-    <developerConnection>scm:git:git@github.com:bazaarvoice/s3-upload-maven-plugin.git</developerConnection>
-    <tag>HEAD</tag>
-  </scm>
+  <name>${project.artifactId}</name>
+  <url>https://github.com/dangernoodle-io/s3-upload-maven-plugin</url>
+  <description>maven plugin to upload files to amazon s3</description>
 
   <properties>
-    <maven.compiler.source>1.6</maven.compiler.source>
-    <maven.compiler.target>1.6</maven.compiler.target>
-    <encoding>UTF-8</encoding>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+
+    <aws.version>1.10.69</aws.version>
+    <maven-plugin-api.version>3.6.2</maven-plugin-api.version>
+
+    <animal-sniffer-maven-plugin.version>1.16</animal-sniffer-maven-plugin.version>
+    <maven-plugin-plugin.version>3.6.0</maven-plugin-plugin.version>
+    <signature-java18.version>1.0</signature-java18.version>
   </properties>
 
   <build>
@@ -32,12 +33,12 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>animal-sniffer-maven-plugin</artifactId>
-        <version>1.15</version>
+        <version>${animal-sniffer-maven-plugin.version}</version>
         <configuration>
           <signature>
             <groupId>org.codehaus.mojo.signature</groupId>
-            <artifactId>java16</artifactId>
-            <version>1.1</version>
+            <artifactId>java18</artifactId>
+            <version>${signature-java18.version}</version>
           </signature>
         </configuration>
         <executions>
@@ -52,7 +53,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-plugin-plugin</artifactId>
-        <version>3.4</version>
+        <version>${maven-plugin-plugin.version}</version>
         <configuration>
           <skipErrorNoDescriptorsFound>true</skipErrorNoDescriptorsFound>
         </configuration>
@@ -63,7 +64,6 @@
               <goal>descriptor</goal>
             </goals>
           </execution>
-          <!-- if you want to generate help goal -->
           <execution>
             <id>help-goal</id>
             <goals>
@@ -72,17 +72,6 @@
           </execution>
         </executions>
       </plugin>
-      <plugin>
-        <groupId>org.sonatype.plugins</groupId>
-        <artifactId>nexus-staging-maven-plugin</artifactId>
-        <version>1.6.7</version>
-        <extensions>true</extensions>
-        <configuration>
-          <serverId>sonatype-nexus-staging</serverId>
-          <nexusUrl>https://oss.sonatype.org/</nexusUrl>
-          <autoReleaseAfterClose>true</autoReleaseAfterClose>
-        </configuration>
-      </plugin>
     </plugins>
   </build>
 
@@ -90,30 +79,36 @@
     <dependency>
       <groupId>org.apache.maven</groupId>
       <artifactId>maven-plugin-api</artifactId>
-      <version>3.3.9</version>
+      <version>${maven-plugin-api.version}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.maven.plugin-tools</groupId>
       <artifactId>maven-plugin-annotations</artifactId>
-      <version>3.4</version>
-      <scope>provided</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>com.amazonaws</groupId>
-      <artifactId>aws-java-sdk-core</artifactId>
-      <version>1.10.69</version>
+      <version>${maven-plugin-plugin.version}</version>
+      <optional>true</optional>
     </dependency>
     <dependency>
       <groupId>com.amazonaws</groupId>
       <artifactId>aws-java-sdk-s3</artifactId>
-      <version>1.10.69</version>
+      <version>${aws.version}</version>
     </dependency>
     <dependency>
-      <!-- The STS SDK is necessary if role based profiles are used for credentials. -->
       <groupId>com.amazonaws</groupId>
       <artifactId>aws-java-sdk-sts</artifactId>
-      <version>1.10.69</version>
+      <version>${aws.version}</version>
     </dependency>
   </dependencies>
+
+  <scm>
+    <url>https://github.com/dangernoodle-io/s3-upload-maven-plugin</url>
+    <connection>scm:git:git@github.com:dangernoodle-io/s3-upload-maven-plugin.git</connection>
+    <developerConnection>scm:git:git@github.com:dangernoodle-io/s3-upload-maven-plugin.git</developerConnection>
+    <tag>HEAD</tag>
+  </scm>
+
+  <issueManagement>
+    <system>GitHub</system>
+    <url>https://github.com/dangernoodle-io/s3-upload-maven-plugin/issues</url>
+  </issueManagement>
+
 </project>
